--- a/app/src/main/res/layout/item_measurement.xml
+++ b/app/src/main/res/layout/item_measurement.xml
@@ -11,16 +11,6 @@
   android:orientation="horizontal">
 
   <TextView
-    android:id="@+id/amount"
-    style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="60dp"
-    android:layout_height="wrap_content"
-    android:layout_columnWeight="1"
-    android:gravity="center"
-    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-    android:text="1235 ml"/>
-
-  <TextView
     android:id="@+id/date"
     style="@style/TextAppearance.MaterialComponents.Body1"
     android:layout_width="90dp"
@@ -28,7 +18,17 @@
     android:layout_columnWeight="1"
     android:gravity="center"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-    android:text="24.06.2019"/>
+    android:text="@string/_24_06_2019"/>
+
+  <TextView
+    android:id="@+id/amount"
+    style="@style/TextAppearance.MaterialComponents.Body1"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+    android:text="@string/_1235_ml"/>
 
   <TextView
     android:id="@+id/max_glucose"
@@ -38,7 +38,7 @@
     android:layout_columnWeight="1"
     android:gravity="center"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-    android:text="200"/>
+    android:text="@string/_200"/>
 
   <TextView
     android:id="@+id/avg_glucose"
@@ -48,7 +48,7 @@
     android:layout_columnWeight="1"
     android:gravity="center"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-    android:text="120"/>
+    android:text="@string/_120"/>
 
   <TextView
     android:id="@+id/rating"
@@ -59,5 +59,5 @@
     android:layout_columnWeight="1"
     android:gravity="center"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-    android:text="unrated"/>
+    android:text="@string/unrated"/>
 </GridLayout>
