--- a/app/src/main/res/layout/fragment_graphs_foods.xml
+++ b/app/src/main/res/layout/fragment_graphs_foods.xml
@@ -26,7 +26,7 @@
 
       <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/chart"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="350dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="32dp">
