--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,119 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/scroll"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".view.home.HomeFragment">
 
-  <ScrollView
-    android:id="@+id/scrollView2"
-    android:layout_width="0dp"
-    android:layout_height="665dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="8dp"
-    app:layout_constraintBottom_toTopOf="@+id/main_activity_bottom_nav"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <!-- Current measurement -->
+    <TextView
+      android:id="@+id/time"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_margin="16dp"
+      android:text="@string/active_measurement"
+      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+      android:textColor="@color/colorPrimary"/>
 
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical">
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp">
 
       <TextView
-        android:id="@+id/textView6"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Currently Measuring"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
+        android:layout_height="match_parent"
+        android:text="@string/food_name"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
-      <TableLayout
+      <TextView
+        android:id="@+id/age"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TableRow>
-
-          <TextView
-            android:padding="3dip"
-            android:text="Product Name"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:gravity="start"
-            android:padding="3dip"
-            android:text="Lorem"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
-        </TableRow>
-
-        <TableRow>
-
-          <TextView
-            android:padding="3dip"
-            android:text="Start time"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:gravity="start"
-            android:padding="3dip"
-            android:text="02:00pm"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
-        </TableRow>
-
-        <TableRow>
-
-          <TextView
-            android:padding="3dip"
-            android:text="End time"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:gravity="start"
-            android:padding="3dip"
-            android:text="04:00pm"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
-        </TableRow>
-
-        <TableRow>
-
-          <TextView
-            android:padding="3dip"
-            android:text="Measurment intervall"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:gravity="start"
-            android:padding="3dip"
-            android:text="15 minutes"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
-        </TableRow>
-
-        <TableRow>
-
-          <TextView
-            android:padding="3dip"
-            android:paddingEnd="20dp"
-            android:text="Next measurement in"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:gravity="start"
-            android:padding="3dip"
-            android:text="4 minutes"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
-        </TableRow>
-      </TableLayout>
-
-      <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="enter value"/>
-
+        android:layout_height="match_parent"
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
     </LinearLayout>
-  </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp">
+
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/time_consumed"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+
+      <TextView
+        android:id="@+id/height"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp">
+
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/estimated_end_time"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+
+      <TextView
+        android:id="@+id/weight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp">
+
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/measurement_interval"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+
+      <TextView
+        android:id="@+id/sex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+    </LinearLayout>
+
+    <Button
+      android:id="@+id/button1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Button - Go to mkyong.com" />
+
+  </LinearLayout>
+</ScrollView>
+
