--- a/app/src/main/res/layout/fragment_food_add.xml
+++ b/app/src/main/res/layout/fragment_food_add.xml
@@ -12,8 +12,7 @@
 
   <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
       android:layout_width="match_parent"
@@ -30,13 +29,27 @@
         android:textColor="@color/colorPrimary"/>
 
       <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        android:paddingBottom="16dp">
+
+        <AutoCompleteTextView
+          android:id="@+id/select_food"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:hint="@string/select_food"/>
+      </com.google.android.material.textfield.TextInputLayout>
+
+      <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:focusableInTouchMode="true"
         android:hint="@string/food_name">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -44,8 +57,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
-          android:text="@{vm.foodAddDataModel.foodName}"
-          />
+          android:text="@{vm.foodAddDataModel.foodName}"/>
       </com.google.android.material.textfield.TextInputLayout>
 
       <com.google.android.material.textfield.TextInputLayout
@@ -62,8 +74,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
-          android:text="@{vm.foodAddDataModel.brandName}"
-          />
+          android:text="@{vm.foodAddDataModel.brandName}"/>
       </com.google.android.material.textfield.TextInputLayout>
 
       <com.google.android.material.textfield.TextInputLayout
@@ -186,7 +197,7 @@
         android:hint="@string/carbohydrate">
 
         <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/carbohydrate"
+          android:id="@+id/carbohydrates"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="numberDecimal"
